<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="pos"
            type="Integer" />

        <variable
            name="transaction"
            type="com.manektechpractical.roomdatabase.TransactionDetails" />

        <import type="android.view.View" />

        <import type="com.manektechpractical.R" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/amount"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="bold"
                android:visibility="@{pos==0?View.VISIBLE:View.GONE}" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@{context.getString(R.string.atm_amount_value,transaction.withDrawnAmount)}"
                android:textColor="@color/black"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/rs_100"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="bold"
                android:visibility="@{pos==0?View.VISIBLE:View.GONE}" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@{Integer.toString(transaction.note100)}"
                android:textColor="@color/black"
                android:textSize="13sp"
                tools:text="2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/rs_200"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="bold"
                android:visibility="@{pos==0?View.VISIBLE:View.GONE}" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@{Integer.toString(transaction.note200)}"
                android:textColor="@color/black"
                android:textSize="13sp"
                tools:text="2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/rs_500"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="bold"
                android:visibility="@{pos==0?View.VISIBLE:View.GONE}" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@{Integer.toString(transaction.note500)}"
                android:textColor="@color/black"
                android:textSize="13sp"
                tools:text="2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rs_2000"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="bold"
                android:visibility="@{pos==0?View.VISIBLE:View.GONE}" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@{Integer.toString(transaction.note2000)}"
                android:textColor="@color/black"
                android:textSize="13sp"
                tools:text="2" />

        </LinearLayout>

    </LinearLayout>
</layout>
